WV-1299: Licence link now in the correct location on mobile

--- a/web/css/wv.mobile.css
+++ b/web/css/wv.mobile.css
@@ -22,12 +22,6 @@
         max-height:97%;
     }
 
-    .bank li.item a {
-        float:right;
-        color:#fff;
-        margin-right:1.6em;
-    }
-
     img.bank-item-img {
         display:block;
         height: 1.6em;
